# eufy-n8n

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bridge/: .dockerignore  Dockerfile  commands.md  events.md  index.js  listen_events.js  listen_events_simple.js  package-lock.json  package.json  pull-videos.js  run_image_db_commands.js  solve_captcha.js  test.js  test_db_queries.js
eufy-ws/: Dockerfile
evals/: __init__.py  app.py  bookings.json  bootstrap.py  review.py  run_eval.py
infra/: README.md
scripts/: build_gemini_json.py  log-exporter.sh  prune_todos.py
vid-analyser/: Makefile  pyproject.toml
vid-analyser/src/vid_analyser/: auth.py  overlay.py  prompting.py
vid-analyser/src/vid_analyser/api/: app.py
vid-analyser/src/vid_analyser/db/: __init__.py  repository.py  schema.py  types.py
vid-analyser/src/vid_analyser/evals/: config.py  judge.py  report_model.py  runner.py
vid-analyser/src/vid_analyser/evals/store/: __init__.py  local.py
vid-analyser/src/vid_analyser/evals/ui/: app.py  golden_form.py
vid-analyser/src/vid_analyser/evals/ui/labeler/: __init__.py  app.py  golden_form.py
vid-analyser/src/vid_analyser/evals/ui/results/: __init__.py  app.py
vid-analyser/src/vid_analyser/llm/: base.py  gemini.py  response_model.py
vid-analyser/src/vid_analyser/pipeline/: run.py
vid-analyser/src/vid_analyser/storage/: __init__.py  base.py  local.py  s3.py
vid-analyser/src/vid_analyser/ui/: routes.py
vid-analyser/tests/: test_db_repository.py  test_storage.py
vid-analyser/tests/api/: test_app.py
vid-analyser/tests/evals/: test_eval_cli.py  test_judge.py  test_results_app.py  test_runner.py
vid-analyser/tests/pipeline/: test_run.py
(+33 files in other folders)
