[project]
name = "vid-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.0",
    "fastapi>=0.118.0",
    "google-genai>=1.64.0",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.2",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.6,<22",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
    "streamlit>=1.54.0",
]
ui = [
    "python-dotenv>=1.1.0",
    "streamlit>=1.54.0",
]
